--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@barba/core": "^2.10.3",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
+    "@theatre/core": "^0.7.2",
+    "@theatre/studio": "^0.7.2",
     "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
-    "lenis": "^1.1.13",
+    "lenis": "^1.3.14",
+    "locomotive-scroll": "^4.1.4",
     "next": "^15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
