--- a/package.json
+++ b/package.json
@@ -3,24 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "tinacms dev -c \"next dev\"",
+    "build": "tinacms build && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
+    "@supabase/supabase-js": "^2.81.1",
     "@theatre/core": "^0.7.2",
     "@theatre/studio": "^0.7.2",
+    "@tinacms/cli": "^1.12.5",
+    "@tiptap/extension-character-count": "^3.10.7",
+    "@tiptap/extension-image": "^3.10.7",
+    "@tiptap/extension-link": "^3.10.7",
+    "@tiptap/extension-placeholder": "^3.10.7",
+    "@tiptap/react": "^3.10.7",
+    "@tiptap/starter-kit": "^3.10.7",
+    "@vercel/analytics": "^1.5.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
     "lenis": "^1.3.14",
     "locomotive-scroll": "^4.1.4",
+    "nanoid": "^5.1.6",
     "next": "^15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "tinacms": "^2.10.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^22.8.6",
