--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/react": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
